[package]
name = "mysql-udf-http-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
udf = "0.5.5"
reqwest = { version = "0.12.4", features = ["json", "gzip", "blocking", "__tls", "multipart"], default-features = true }
serde_json = "1.0.117"
anyhow = "1.0.86"
base64 = "0.22.1"
serde = { version = "1.0.203", features = ["derive"] }
libc="0.2.155"
tokio-tungstenite = {version="0.23.1",futures=["connect"]}
futures-util = "0.3.30"
tokio = { version = "1.38.0",  features = ["rt", "rt-multi-thread", "macros","io-std"] }
futures-channel = "0.3.30"


[lib]
crate-type = ["cdylib"]